# DEF-aoexp

./: .gitignore  ASSETS.md  CLAUDE.md  Dockerfile.serve  NEXT_STEPS.md  PRD.md  README.md  TRAINING_REPORT.md  anima_module.yaml  docker-compose.serve.yml  hf_model_card.md  pyproject.toml
benchmarks/: benchmark_kernels.py  benchmark_results.json
configs/: default.toml  train_full.toml
kernels/: aoexp_cuda_kernels.cu  build.sh  build_jit.py  setup.py
scripts/: eval_uav.py  run_train.sh
src/def_aoexp/: __init__.py  ao_exp_optimizer.py  attack_engine.py  config.py  data_pipeline.py  export.py  losses.py  train.py  train_cu.py  utils.py
tests/: test_ao_exp_optimizer.py  test_config.py  test_data_pipeline.py  test_export.py
